--- a/pages/register.html
+++ b/pages/register.html
@@ -3,11 +3,13 @@
   <div class="container h-100">
     <div class="blog-banner">
       <div class="text-center">
-        <h1>Register</h1>
+        <h1>Регистрация</h1>
         <nav aria-label="breadcrumb" class="banner-breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Register</li>
+            <li class="breadcrumb-item"><a href="/">Главная</a></li>
+            <li class="breadcrumb-item active" aria-current="page">
+              Регистрация
+            </li>
           </ol>
         </nav>
       </div>
@@ -23,76 +25,74 @@
       <div class="col-lg-6">
         <div class="login_box_img">
           <div class="hover">
-            <h4>Already have an account?</h4>
+            <h4>Уже зарегистрированы?</h4>
             <p>
-              There are advances being made in science and technology everyday,
-              and a good example of this is the
+              Тогда для получения доступа перейдите на страницу авторизации.
             </p>
-            <a class="button button-account" href="login.html">Login Now</a>
+            <a class="button button-account" href="/auth">Авторизация</a>
           </div>
         </div>
       </div>
       <div class="col-lg-6">
         <div class="login_form_inner register_form_inner">
-          <h3>Create an account</h3>
-          <form class="row login_form" action="#/" id="register_form">
+          <h3>Зарегистрироваться</h3>
+          <form class="row login_form" onsubmit="sendForm(this); return false;">
             <div class="col-md-12 form-group">
               <input
                 type="text"
                 class="form-control"
-                id="name"
                 name="name"
-                placeholder="Username"
+                placeholder="Имя"
                 onfocus="this.placeholder = ''"
-                onblur="this.placeholder = 'Username'"
+                onblur="this.placeholder = 'Имя'"
+                required
               />
             </div>
             <div class="col-md-12 form-group">
               <input
                 type="text"
                 class="form-control"
-                id="email"
+                name="lastname"
+                placeholder="Фамилия"
+                onfocus="this.placeholder = ''"
+                onblur="this.placeholder = 'Фамилия'"
+                required
+              />
+            </div>
+            <div class="col-md-12 form-group">
+              <input
+                type="email"
+                class="form-control"
                 name="email"
-                placeholder="Email Address"
+                placeholder="Email"
                 onfocus="this.placeholder = ''"
-                onblur="this.placeholder = 'Email Address'"
+                onblur="this.placeholder = 'Email'"
+                required
               />
             </div>
             <div class="col-md-12 form-group">
               <input
-                type="text"
+                type="password"
                 class="form-control"
-                id="password"
-                name="password"
-                placeholder="Password"
+                name="pass"
+                placeholder="Пароль"
                 onfocus="this.placeholder = ''"
-                onblur="this.placeholder = 'Password'"
+                onblur="this.placeholder = 'Пароль'"
+                required
               />
             </div>
-            <div class="col-md-12 form-group">
-              <input
-                type="text"
-                class="form-control"
-                id="confirmPassword"
-                name="confirmPassword"
-                placeholder="Confirm Password"
-                onfocus="this.placeholder = ''"
-                onblur="this.placeholder = 'Confirm Password'"
-              />
-            </div>
+            <p id="info" style="color: red; padding-left: 1.5rem"></p>
             <div class="col-md-12 form-group">
               <div class="creat_account">
-                <input type="checkbox" id="f-option2" name="selector" />
-                <label for="f-option2">Keep me logged in</label>
+                <input type="checkbox" name="selector" required />
+                <label for="f-option2"
+                  >Согласен на обработку персональный данных</label
+                >
               </div>
             </div>
             <div class="col-md-12 form-group">
-              <button
-                type="submit"
-                value="submit"
-                class="button button-register w-100"
-              >
-                Register
+              <button type="submit" class="button button-register w-100">
+                Зарегистрироваться
               </button>
             </div>
           </form>
@@ -102,3 +102,48 @@
   </div>
 </section>
 <!--================End Login Box Area =================-->
+
+<!-- Модальное окно -->
+<div
+  class="modal fade"
+  id="myModal"
+  data-backdrop="static"
+  data-keyboard="false"
+  tabindex="-1"
+  aria-labelledby="staticBackdropLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">
+          Вы успешно зарегистрированы.
+        </h5>
+      </div>
+      <div class="modal-body">
+        И будете перенаправлены на страницу авторизации через 3 секунды.
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  async function sendForm(form) {
+    info.innerText = "";
+    let formData = new FormData(form);
+
+    let response = await fetch("addUser", {
+      method: "POST",
+      body: formData,
+    });
+    let res = await response.json();
+    if (res.result == "success") {
+      $("#myModal").modal("show");
+      setTimeout(() => {
+        location.href = "auth";
+      }, 4000);
+    } else if ((res.result = "exist")) {
+      info.innerText = "Такой пользователь уже существует!";
+    }
+  }
+</script>
